// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleViewComponent is created 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
  
</app-simple-view>
`;

exports[`SimpleViewComponent with data renders 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
  <div
    class="position-relative ng-tns-c1-0 ng-star-inserted"
  >
    <div
      class="scroll-x-auto"
      ddflexbox="hys"
      style="max-width: 100%;"
    >
      
      
      <mat-list
        class="mat-list-auto-height ng-tns-c1-0 ng-star-inserted"
      >
        
        
        
        
        
        
        
        <table
          class="ng-tns-c1-0 ng-star-inserted"
        >
          
          <tr
            class="ng-tns-c1-0 ng-star-inserted"
          >
            <td
              class="ng-tns-c1-0"
              style="vertical-align: top;"
            >
              <mat-list-item
                class="ng-tns-c1-0"
              >
                <span
                  class="no-break-text ng-tns-c1-0"
                >
                   undefined 
                </span>
              </mat-list-item>
            </td>
            <td
              class="ng-tns-c1-0"
            >
              <mat-list-item
                class="ng-tns-c1-0 ng-trigger ng-trigger-TRIGGER_WobbleX"
                style=""
              >
                <span
                  class="break-text ng-tns-c1-0 size-data-label"
                >
                  
                  
                  
                  
                  
                  
                  
                  
                  <span
                    class="ng-tns-c1-0 ng-star-inserted"
                    style=""
                  >
                     value 
                  </span>
                </span>
              </mat-list-item>
            </td>
          </tr>
        </table>
        
        
      </mat-list>
    </div>
  </div>
</app-simple-view>
`;
